<resources>
    <string name="app_name">课表查询</string>
    <string name="title_subject">课表</string>
    <string name="title_score">成绩</string>
    <string name="title_exam">考试</string>
    <string name="student_id">学号</string>
    <string name="password">密码</string>
    <string name="captcha">验证码</string>
    <string-array name="year">
        <item>2017——2018</item>
        <item>2018——2019</item>
        <item>2019——2020</item>
        <item>2020——2021</item>
        <item>2021——2022</item>
    </string-array>
    <string-array name="term">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="login">登录</string>
    <string name="login_first">请先登录</string>
    <string name="seat_id">座位号</string>
    <string name="place">地点</string>
    <string name="time">时间</string>
    <string name="setting">设置</string>
    <string name="addCalendar">添加到日历</string>
    <string name="gpa">GPA</string>
    <string name="subject_last">节数</string>
    <string name="subject_week">课程周数</string>
    <string name="subject_place">课程地点</string>
    <string name="subject_teacher">课程教师</string>
    <string name="start_day">start_day</string>
    <string name="useIntranet">use_intranet</string>
    <string name="clear_log">clear_log</string>
    <string name="hitokoto">hitokoto</string>
    <string name="check_update">check_update</string>
    <string name="show_weekend">show_week</string>
</resources>
