<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <CheckBoxPreference
        android:defaultValue="false"
        app:key="@string/useIntranet"
        app:title="使用内网" />

    <PreferenceCategory app:title="课表设置">

        <Preference
            app:key="@string/start_day"
            app:title="设置开学日期" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/show_weekend"
            app:title="显示周末" />

    </PreferenceCategory>

    <PreferenceCategory app:title="其他设置">
        <CheckBoxPreference
            android:defaultValue="false"
            app:key="@string/hitokoto"
            app:title="一句" />

        <Preference
            android:key="@string/clear_log"
            app:title="清理缓存" />

        <Preference
            android:key="@string/check_update"
            app:title="检查更新">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/qian0817/zjutjw/releases" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>