<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_login_svg"
        android:title="@string/login" />

    <item
        android:id="@+id/navigation_subject"
        android:icon="@drawable/ic_subject_svg"
        android:title="@string/title_subject" />

    <item
        android:id="@+id/navigation_score"
        android:icon="@drawable/ic_grade_svg"
        android:title="@string/title_score" />

    <item
        android:id="@+id/navigation_examination"
        android:icon="@drawable/ic_exam_svg"
        android:title="@string/title_exam" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting_svg"
        android:title="@string/setting" />
</menu>
