<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/last_image_view"
            android:layout_width="@dimen/subject_item_height"
            android:layout_height="@dimen/subject_item_height"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/subject_last"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/subject_last_text_view"
            app:srcCompat="@drawable/ic_item_svg" />

        <ImageView
            android:id="@+id/week_image_view"
            android:layout_width="@dimen/subject_item_height"
            android:layout_height="@dimen/subject_item_height"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/subject_week"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/week_text_view"
            app:srcCompat="@drawable/ic_week_svg" />

        <ImageView
            android:id="@+id/place_image_view"
            android:layout_width="@dimen/subject_item_height"
            android:layout_height="@dimen/subject_item_height"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/subject_place"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/place_text_view"
            app:srcCompat="@drawable/ic_place" />

        <ImageView
            android:id="@+id/teacher_image_view"
            android:layout_width="@dimen/subject_item_height"
            android:layout_height="@dimen/subject_item_height"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/subject_teacher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/teacher_name_text_view"
            app:srcCompat="@drawable/ic_teacher_svg" />

        <TextView
            android:id="@+id/subject_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subject_last_text_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/subject_item_height"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/last_image_view"
            app:layout_constraintTop_toBottomOf="@+id/week_text_view" />

        <TextView
            android:id="@+id/place_text_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/subject_item_height"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/place_image_view"
            app:layout_constraintTop_toBottomOf="@+id/teacher_name_text_view" />

        <TextView
            android:id="@+id/week_text_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/subject_item_height"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/week_image_view"
            app:layout_constraintTop_toBottomOf="@+id/place_text_view" />

        <TextView
            android:id="@+id/teacher_name_text_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/subject_item_height"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/teacher_image_view"
            app:layout_constraintTop_toBottomOf="@+id/subject_name_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
